# blog-articles-api-test-task

./: .env.prod.sample  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
article_telegram_bot/: apps.py  bot.py  tasks.py  telegram_utils.py
article_telegram_bot/routers/: __init__.py
article_telegram_bot/routers/command_routers/: __init__.py  base_commands.py  user_commands.py
article_telegram_bot/start_commands_list/: start_cmd_list.py
articles/: admin.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
articles/management/commands/: import_articles.py  scrape_articles.py
articles/migrations/: 0001_initial.py  0002_alter_article_options_article_scraped_title_and_more.py  0003_article_source.py
articles/tests/: test_articles_api.py  test_articles_model.py
articles_scraper/: settings.py
articles_scraper/spiders/: stories.py
blog_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
templates/: password_reset_email.txt
users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_profile.py  0003_add_user.py
users/tests/: test_profile_api.py  test_users_model.py
